Logging not really logging
This should be padre not daddy (and changing
it makes things actually get logged).

--- a/conf/dev/base.yaml
+++ b/conf/dev/base.yaml
@@ -18,7 +18,7 @@ logging:
             handlers: [console]
             level: WARN
             propagate: false
-        daddy:
+        padre:
             handlers: [console]
             level: DEBUG
             propagate: false
