Fix for pep8 fail
In py3 there are more rules, including W504 which is pointless so we
disabled it.

--- a/tox.ini
+++ b/tox.ini
@@ -12,5 +12,5 @@ commands = flake8
 [flake8]
 filename= *.py
 show-source = true
-ignore = H803,H101
+ignore = H803,H101,W504
 exclude=*venv,.tox,.git,etc,cover,scripts,build,*egg*
